--- a/webgiay.html
+++ b/webgiay.html
@@ -7,7 +7,6 @@
 		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<script type="text/javascript" src="js/jquery.js"></script>
-		<script type="text/javascript" src="js/wowslider.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	</head>
@@ -21,15 +20,24 @@
                  	<div id="menu">
                  		<ul id="menu_top">
                  			<li><a href="">Trang chủ</a></li>
-                 			<li><a href="">Giới thiệu</a></li>
-                 			<li><a href="">Thể thao</a></li>
-                 			<li><a href="">Giáo dục</a></li>
-                 			<li><a href="">Pháp luật</a></li>
-                 			<li><a href="">Giải trí</a></li>
-                 			<li><a href="">Xã hội</a></li>
-                 			<li><a href="">Thế giới</a></li>
-                 			<li><a href="">Sự kiện</a></li>
-                 			<li><a href="">Liên hệ</a></li>
+                 			<li><a href="">Khuyến Mãi</a></li>
+                 			<li><a href="">Giày Nam</a>
+								<ul>
+									<li><a href="">NIKE</a></li>
+									<li><a href="">ADIDAS</a></li>
+									<li><a href="">VANS</a>
+								</ul>
+							</li>
+                 			<li><a href="">Giày Nữ</a>
+								<ul>
+									<li><a href="">NIKE</a></li>
+									<li><a href="">Chanel</a></li>
+									<li><a href="">Gucci</a>
+								</ul>
+							</li>
+                 			<li><a href="">Giày Đôi</a></li>
+                 			<li><a href="">Tin Tức</a></li>
+                 			<li><a href="">Phụ Kiện</a></li>
                  		</ul>
                  		<div class="clearfix"></div>
                  		<div id="search">
@@ -41,21 +49,10 @@
                  	</div>
                  </div>
 			</div>
-			
+			<div class="images">
+			</div>
 			<div class="row">
-				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" id="left">
-					<div class="box">
-                         <div class="box_top">
-                         	<p>Hỗ trợ trực tuyến</p>		
-                         </div>
-                         <div class="box_main">
-                         	<div id="support">
-	                        	<p><a href=""><img src="images/yahoo.png"></a><a href=""><img src="images/skype.png"></a></p> 	
-	                        	<p>Hotline:&nbsp;<span>0919 405 624 - 0989 493 036</span></p>
-	                        	<p>Email:&nbsp;hotro@ttm.edu.vn</p>
-                        	</div>
-                         </div>
-					</div>
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" id="left">				
 					<div class="box">
                          <div class="box_top">
                          	<p>Video</p>		
@@ -63,20 +60,7 @@
                          <div class="box_main">
                          	<div id="video">
 	                        	<div id="content_video">
-                                     <iframe width="100%" height="162px" class="embed-player" src="http://www.youtube.com/embed/" frameborder="0" allowfullscreen></iframe>
-                                        <br />
-                						<ul class="list-video">
-                                            <li><a style="cursor:pointer;" title="E_Kh9dX_kGY"><i class="fa fa-caret-right fw"></i>&nbsp;Ái tính chủ diễn</a></li>
-                                            <li><a style="cursor:pointer;" title="f5d50HEvR7I"><i class="fa fa-caret-right fw"></i>&nbsp;Video chả mực chiên</a></li>
-                                        <script>                        
-					                        $(document).ready(function(){
-					                            $('.list-video li').click(function(){
-					                                $(this).parent().siblings('.embed-player').attr('src','http://www.youtube.com/embed/'+$(this).children('a').attr('title'));                                     
-					                            });
-					                        });
-					                    </script>
-                						</ul>
-                					<div class="clearfix"></div>
+                                     <iframe width="100%" height="162px" class="embed-player" src="http://www.youtube.com/embed/" frameborder="0" allowfullscreen></iframe>		
                 				</div>
             					<div class="clearfix"></div>
                         	</div>
@@ -84,24 +68,36 @@
 					</div>
 					<div class="box">
                          <div class="box_top">
-                         	<p>Bài viết mới nhất</p>		
+                         	<p>Danh sách sản phẩm</p>		
                          </div>
                          <div class="box_main">
                          	<ul id="baiviet_l">
-	                        	<li><a href="">Tin mới 1</a></li>
-	                        	<li><a href="">Tin mới 1</a></li>
-	                        	<li><a href="">Tin mới 1</a></li>
-	                        	<li><a href="">Tin mới 1</a></li>
-	                        	<li><a href="">Tin mới 1</a></li>	
+	                        	<li><input type="radio" name="boxsanpham" value=""><a href="">ADIDAS</a></li>
+	                        	<li><input type="radio" name="boxsanpham" value=""><a href="">NIKE</a></li>
+	                        	<li><input type="radio" name="boxsanpham" value=""><a href="">VANS</a></li>
+	                        	<li><input type="radio" name="boxsanpham" value=""><a href="">Gucci</a></li>
+	                        	<li><input type="radio" name="boxsanpham" value=""><a href="">Chanel</a></li>	
                         	</ul>
                          </div>
-					</div>	
+					</div>
+					<div class="box">
+                         <div class="box_top">
+                         	<p>Hỗ trợ trực tuyến</p>		
+                         </div>
+                         <div class="box_main">
+                         	<div id="support">
+	                        	<p><a href=""><img src="images/yahoo.png"></a><a href=""><img src="images/skype.png"></a></p> 	
+	                        	<p>Hotline:&nbsp;<span>01694253555</span></p>
+	                        	<p>Email:&nbsp;hotro@ttm.edu.vn</p>
+                        	</div>
+                         </div>
+					</div>
 				</div>
 				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9" id="center">
 					<div class="box_center">
                          <div class="box_center_top">
                             <div class="box_center_top_l">
-                                <a href="">Pháp luật</a>     
+                                <a href="">ADIDAS</a>     
                             </div>
                             <div class="box_center_top_r"></div>
                             <div class="clearfix"></div>
@@ -109,16 +105,16 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/adidas8.jpg"></a>
+                                    <a href="" class="tinhome_item_name">1</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/adidas2.jpg"></a>
+                                    <a href="" class="tinhome_item_name">2</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/adidas3.jpg"></a>
+                                    <a href="" class="tinhome_item_name">3</a>      
                                 </div>
                             </div>  
                          </div>
@@ -126,7 +122,7 @@
 					<div class="box_center">
                          <div class="box_center_top">
                             <div class="box_center_top_l">
-                                <a href="">Thể thao</a>     
+                                <a href="">Sản phẩm nổi bật </a>     
                             </div>
                             <div class="box_center_top_r"></div>
                             <div class="clearfix"></div>
@@ -134,16 +130,16 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/adidas4.jpg"></a>
+                                    <a href="" class="tinhome_item_name">4</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/adidas5.jpg"></a>
+                                    <a href="" class="tinhome_item_name">5</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/adidas6.jpg"></a>
+                                    <a href="" class="tinhome_item_name">6</a>      
                                 </div>
                             </div>  
                          </div>
@@ -151,7 +147,7 @@
                     <div class="box_center">
                          <div class="box_center_top">
                             <div class="box_center_top_l">
-                                <a href="">Giải trí</a>     
+                                <a href="">Sản Phẩm</a>     
                             </div>
                             <div class="box_center_top_r"></div>
                             <div class="clearfix"></div>
@@ -159,16 +155,16 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/adidas7.jpg"></a>
+                                    <a href="" class="tinhome_item_name">7</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/adidas8.jpg"></a>
+                                    <a href="" class="tinhome_item_name">8</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/tin1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Hoàng Thiên giúp Việt Nam thắng Indonesia</a>      
+                                    <a href="" class="tinhome_item_img"><img src="images/images.jpg"></a>
+                                    <a href="" class="tinhome_item_name">9</a>      
                                 </div>
                             </div>  
                          </div>
@@ -181,13 +177,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="footer">
-                    <p>Bản quyền 2016 thuộc về Vũ Văn Tùng</p>
-                    <p>Địa chỉ:&nbsp;Đằng Lâm - Hải An - Hải Phòng</p>
-                    <p>Điện thoại:&nbsp;01664.295.022</p>
-                    <p>Email:tungvu90@gmail.com</p>                    
+                    <p></p>
+                    <p></p>
+                    <p>Điện thoại:01694253555</p>
+                    <p>Email:phuctp14@gmail.com</p>                    
                 </div>
             </div>
         </div>
 	</div>
 	</body>
-</html>
+</html>        
