--- a/webgiay.html
+++ b/webgiay.html
@@ -20,7 +20,7 @@
                             <form name="frmsearch" method="POST" action="">
                                 <input type="text" name="ten" value="" placeholder="Tìm kiếm từ khóa">
                                 <input type="submit" name="submit" value="Tìm kiếm">
-                            </form>     
+                            </form>  
                         </div>
                     </div>
                     <div id="menu">
@@ -94,15 +94,15 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/adidas8.jpg"></a>
+                                    <a href="" class="adi6"><img src="adi6.jpg"></a>
                                     <a href="" class="tinhome_item_name">1</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/adidas2.jpg"></a>
+                                    <a href="" class="adi5"><img src="adi5.jpg"></a>
                                     <a href="" class="tinhome_item_name">2</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/adidas3.jpg"></a>
+                                    <a href="" class="adi4"><img src="ad4.jpg"></a>
                                     <a href="" class="tinhome_item_name">3</a>      
                                 </div>
                             </div>  
@@ -119,16 +119,16 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/adidas4.jpg"></a>
+                                    <a href="" class="adi3"><img src="adi3.jpg"></a>
                                     <a href="" class="tinhome_item_name">4</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/adidas5.jpg"></a>
+                                    <a href="" class="van5"><img src="vans5.jpg"></a>
                                     <a href="" class="tinhome_item_name">5</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/adidas6.jpg"></a>
-                                    <a href="" class="tinhome_item_name">6</a>      
+                                    <a href="" class="vans4"><img src="vans4.jpg"></a>
+                                    <a href="" class="tinhome_item_name">6</a>      .
                                 </div>
                             </div>  
                          </div>
@@ -144,15 +144,15 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/adidas7.jpg"></a>
+                                    <a href="" class="adi1"><img src="adi1.png"></a>
                                     <a href="" class="tinhome_item_name">7</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/adidas8.jpg"></a>
+                                    <a href="" class="ad2"><img src="ad2.jpg"></a>
                                     <a href="" class="tinhome_item_name">8</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="tinhome_item_img"><img src="images/images.jpg"></a>
+                                    <a href="" class="vans1"><img src="vans1.jpg"></a>
                                     <a href="" class="tinhome_item_name">9</a>      
                                 </div>
                             </div>  
