--- a/webgiay.html
+++ b/webgiay.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="jquery.js"></script>
+        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="bootstrap.min.js"></script>
     </head>
     <body>
         <div class="container">
