--- a/webgiay.html
+++ b/webgiay.html
@@ -11,7 +11,7 @@
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                  <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12" id="header">
                     <div id="logo">
@@ -164,7 +164,7 @@
         </div>
     </div>
     <div id="bg_footer">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="footer">
                     <p></p>
