--- a/webgiay.html
+++ b/webgiay.html
@@ -25,7 +25,7 @@
                     </div>
                     <div id="menu">
                         <ul id="menu_top">
-                            <li><a href="">Trang chủ</a></li>
+                            <li><a href="webgiay.html">Trang chủ</a></li>
                             <li><a href="">Khuyến Mãi</a></li>
                             <li><a href="">Giày Nam</a>
                                 <ul>
@@ -41,10 +41,9 @@
                                     <li><a href="">Gucci</a>
                                 </ul>
                             </li>
-                            <li><a href="">Giày Đôi</a></li>
+                            <li><a href="Menu/giaydoi">Giày Đôi</a></li>
                             <li><a href="">Tin Tức</a></li>
-                            <li><a href="">Phụ Kiện</a></li>
-                            
+                            <li><a href="Menu/phukien">Phụ Kiện</a></li>                            
                         </ul>                   
 
                     </div>
@@ -96,7 +95,7 @@
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
                                     <a href="" class="da5"><img src="images/da5.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Giày Fashion 161 Đen Trắng <br>Giá : 4$</a>      
+                                    <a href="" class="tinhome_item_name">Giày Fashion 161 Đen Trắng <br>Giá : <del> 5$ </del>   -  4$</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
                                     <a href="" class="da7"><img src="images/da7.jpg"></a>
@@ -156,6 +155,7 @@
                                     <a href="" class="v4"><img src="images/v4.jpg"></a>
                                     <a href="" class="tinhome_item_name">Giày Vans Xanh <br> Giá : 2$</a>      
                                 </div>
+
                             </div>  
                          </div>
                     </div>                      
