--- a/Menu/khuyenmai.html
+++ b/Menu/khuyenmai.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -25,8 +25,8 @@ DOCTYPE html>
                     <div id="menu">
                         <ul id="menu_top">
                             <li><a href="../webgiay.html">Trang chủ</a></li>
-                            <li><a href="Menu/khuyenmai">Khuyến Mãi</a></li>
-                            <li><a href="">Giày Nam</a>
+                            <li><a href="../Menu/khuyenmai.html">Khuyến Mãi</a></li>
+                            <li><a href="../Menu/giaynam.html">Giày Nam</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">ADIDAS</a></li>
@@ -40,9 +40,9 @@ DOCTYPE html>
                                     <li><a href="">Gucci</a>
                                 </ul>
                             </li>
-                            <li><a href="Menu/giaydoi1.html">Giày Đôi</a></li>
+                            <li><a href="../Menu/giaydoi">Giày Đôi</a></li>
                             <li><a href="">Tin Tức</a></li>
-                            <li><a href="">Phụ Kiện</a></li>
+                            <li><a href="../Menu/phukien">Phụ Kiện</a></li>
                         </ul>
                     </div>
                  </div>
