--- a/webgiay.html
+++ b/webgiay.html
@@ -26,8 +26,8 @@
                     <div id="menu">
                         <ul id="menu_top">
                             <li><a href="webgiay.html">Trang chủ</a></li>
-                            <li><a href="">Khuyến Mãi</a></li>
-                            <li><a href="">Giày Nam</a>
+                            <li><a href="Menu/khuyenmai.html">Khuyến Mãi</a></li>
+                            <li><a href="Menu/giaynam.hhtml">Giày Nam</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">ADIDAS</a></li>
