--- a/Menu/giaydoi.html
+++ b/Menu/giaydoi.html
@@ -4,7 +4,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Xây dựng website</title>
         <link rel="stylesheet" type="text/css" href="../css/style.css">
-        
         <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
         <script type="text/javascript" src="../js/jquery.js"></script>
         <script type="text/javascript" src="../js/script.js"></script>
@@ -25,8 +24,8 @@
                     <div id="menu">
                         <ul id="menu_top">
                             <li><a href="../webgiay.html">Trang chủ</a></li>
-                            <li><a href="../Menu/khuyenmai">Khuyến Mãi</a></li>
-                            <li><a href="">Giày Nam</a>
+                            <li><a href="../Menu/khuyenmai.html">Khuyến Mãi</a></li>
+                            <li><a href="../Menu/giaynam.html">Giày Nam</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">ADIDAS</a></li>
