--- a/Menu/giaydoi.html
+++ b/Menu/giaydoi.html
@@ -39,9 +39,9 @@
                                     <li><a href="">Gucci</a>
                                 </ul>
                             </li>
-                            <li><a href="../Menu/giaydoi">Giày Đôi</a></li>
+                            <li><a href="../Menu/giaydoi.html">Giày Đôi</a></li>
                             <li><a href="">Tin Tức</a></li>
-                            <li><a href="../Menu/phukien">Phụ Kiện</a></li>                            
+                            <li><a href="../Menu/phukien.html">Phụ Kiện</a></li>                            
                         </ul>                   
                     </div>
                  </div>
