Update and rename phukien to phukien.html

--- a/Menu/phukien.html
+++ b/Menu/phukien.html
@@ -25,8 +25,8 @@
                     <div id="menu">
                         <ul id="menu_top">
                             <li><a href="../webgiay.html">Trang chủ</a></li>
-                            <li><a href="">Khuyến Mãi</a></li>
-                            <li><a href="">Giày Nam</a>
+                            <li><a href="../Menu/khuyenmai.html">Khuyến Mãi</a></li>
+                            <li><a href="../Menu/giaynam">Giày Nam</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">ADIDAS</a></li>
@@ -40,9 +40,9 @@
                                     <li><a href="">Gucci</a>
                                 </ul>
                             </li>
-                            <li><a href="../Menu/giaydoi">Giày Đôi</a></li>
+                            <li><a href="../Menu/giaydoi.html">Giày Đôi</a></li>
                             <li><a href="">Tin Tức</a></li>
-                            <li><a href="../Menu/phukien">Phụ Kiện</a></li>                            
+                            <li><a href="../Menu/phukien.html">Phụ Kiện</a></li>                            
                         </ul>                   
                     </div>
                  </div>
