--- a/Menu/giaydoi.html
+++ b/Menu/giaydoi.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Xây dựng website</title>
         <link rel="stylesheet" type="text/css" href="../css/style.css">
+        
         <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
         <script type="text/javascript" src="../js/jquery.js"></script>
         <script type="text/javascript" src="../js/script.js"></script>
@@ -47,7 +48,7 @@
                  </div>
             </div>
             <div class="images">
-                <img src="../images/bia4.jpeg" width="100% >
+                <img src="../images/biagd1.gif" width="100%" height="500px" >
         <div class="row" >
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="center">
                 <div class="box_center">
