--- a/Menu/khuyenmai.html
+++ b/Menu/khuyenmai.html
@@ -36,8 +36,8 @@
                             <li><a href="">Giày Nữ</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
-                                    <li><a href="">Chanel</a></li>
-                                    <li><a href="">Gucci</a>
+                                    <li><a href="">ADIDAS</a></li>
+                                    <li><a href="">CHANEL</a>
                                 </ul>
                             </li>
                             <li><a href="../Menu/giaydoi">Giày Đôi</a></li>
