--- a/webgiay.html
+++ b/webgiay.html
@@ -37,8 +37,8 @@
                             <li><a href="">Giày Nữ</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
-                                    <li><a href="">Chanel</a></li>
-                                    <li><a href="">Gucci</a>
+                                    <li><a href="">ADIDAS</a></li>
+                                    <li><a href="">CHANEL</a>
                                 </ul>
                             </li>
                             <li><a href="Menu/giaydoi.html">Giày Đôi</a></li>
@@ -86,7 +86,7 @@
                     <div class="box_center">
                          <div class="box_center_top">
                             <div class="box_center_top_l">
-                                <a href="">ADIDAS</a>     
+                                <a href="">Sản phẩm bán chạy</a>     
                             </div>
                             <div class="box_center_top_r"></div>
                             <div class="clearfix"></div>
@@ -94,15 +94,15 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="da5"><img src="images/da5.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Giày Fashion 161 Đen Trắng <br>Giá : <del> 5$ </del>   -  4$</a>      
+                                    <a href="" class="da18"><img src="images/da18.jpg"></a>
+                                    <a href="" class="tinhome_item_name">Giày Adidas NMD Xám <br>Giá :  2,5$</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="da7"><img src="images/da7.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Giày Fashion 161 hồng <br> Giá : 4$</a>      
+                                    <a href="" class="da14"><img src="images/da14.jpg"></a>
+                                    <a href="" class="tinhome_item_name">Giày Adidas Supper Star <br> Giá : 2,7</a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="da3"><img src="images/da3.jpg"></a>
+                                    <a href="" class="da17"><img src="images/da17.jpg"></a>
                                     <a href="" class="tinhome_item_name">Giày Fashion NMD Hồng <br> Giá : 2,5$</a>      
                                 </div>
                             </div>  
@@ -119,12 +119,12 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="da4"><img src="images/da4.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Giày Fashion NMD Xám <br> Giá : 2,5$ </a>      
+                                    <a href="" class="da5"><img src="images/da5.jpg"></a>
+                                    <a href="" class="tinhome_item_name">Giày Adidas Đen Trắng <br> Giá : 4$ </a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
-                                    <a href="" class="v1"><img src="images/v1.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Giày vans Đen <br> Giá : 2$ </a>      
+                                    <a href="" class="nik4"><img src="images/nik4.jpg"></a>
+                                    <a href="" class="tinhome_item_name">Giày Nike Kaishi <br> Giá : 2,5$ </a>      
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 tinhome_item">
                                     <a href="" class="v2"><img src="images/v2.jpg"></a>
