--- a/Menu/giaynam.html
+++ b/Menu/giaynam.html
@@ -62,16 +62,16 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="da10"><img src="../images/da10.jpg"></a>
-                                    <a href="" class="tinhome_item_name"> Giày Adidas Tubular Shadow  <br>  Giá : 3$ </a>
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
                                     <a href="" class="da11"><img src="../images/da11.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Giày Adidas Trắng<br > Giá :   2$ </a>
+                                    <a href="" class="tinhome_item_name"> Giày Adidas Trắng  <br>  Giá : 2$ </a>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="da6"><img src="../images/da6.jpg"></a>
-                                    <a href="" class="tinhome_item_name"> Gìay Adidas NMD XR1 <br>     Giá : 2,7$</a>
+                                    <a href="" class="da10"><img src="../images/da10.jpg"></a>
+                                    <a href="" class="tinhome_item_name">Giày Adidas Tubular Shadow <br > Giá :   3$ </a>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
+                                    <a href="" class="da14"><img src="../images/da14.jpg"></a>
+                                    <a href="" class="tinhome_item_name"> Gìay Adidas Supper Star <br>     Giá : 2,7$</a>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
                                     <a href="" class="da4"><img src="../images/da4.jpg"></a>
