--- a/webgiay.html
+++ b/webgiay.html
@@ -34,11 +34,11 @@
                                     <li><a href="">VANS</a>
                                 </ul>
                             </li>
-                            <li><a href="">Giày Nữ</a>
+                            <li><a href="Menu/giaynu.html">Giày Nữ</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">ADIDAS</a></li>
-                                    <li><a href="">CHANEL</a>
+                                    <li><a href="">GUCCI</a>
                                 </ul>
                             </li>
                             <li><a href="Menu/giaydoi.html">Giày Đôi</a></li>
