--- a/Menu/giaynam.html
+++ b/Menu/giaynam.html
@@ -91,8 +91,8 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="nik10"><img src="../images/nik10.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Giày Nike Air Max Tavas  <br>     Giá :  4,5$ </a>
+                                    <a href="" class="nik15"><img src="../images/nik15.jpg"></a>
+                                    <a href="" class="tinhome_item_name">Giày Nike City Loop   <br>     Giá :  4,5$ </a>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
                                     <a href="" class="nik1"><img src="../images/nik1.jpg"></a>
@@ -103,8 +103,8 @@
                                     <a href="" class="tinhome_item_name">Giày Nike  Classic<br>              Giá : 2,5$ </a>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="nik12"><img src="../images/nik12.jpg"></a>
-                                    <a href="" class="tinhome_item_name">Giày Nike winflo <br>               Giá :  3$ </a>
+                                    <a href="" class="nik14"><img src="../images/nik14.jpg"></a>
+                                    <a href="" class="tinhome_item_name">Giày Nike Airax <br>               Giá :  3$ </a>
                                 </div>
                             </div>
                          </div>
