--- a/Menu/giaynam.html
+++ b/Menu/giaynam.html
@@ -33,7 +33,7 @@
                                     <li><a href="">VANS</a>
                                 </ul>
                             </li>
-                            <li><a href="">Giày Nữ</a>
+                            <li><a href="../Menu/giaynu.html">Giày Nữ</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">Chanel</a></li>
@@ -62,8 +62,8 @@
                          <div class="box_center_main">
                             <div class="row">
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="da11"><img src="../images/da11.jpg"></a>
-                                    <a href="" class="tinhome_item_name"> Giày Adidas Trắng  <br>  Giá : 2$ </a>
+                                    <a href="" class="da112"><img src="../images/da112.jpg"></a>
+                                    <a href="" class="tinhome_item_name"> Giày Adidas NMD Trắng  <br>  Giá : 2,7$ </a>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
                                     <a href="" class="da10"><img src="../images/da10.jpg"></a>
@@ -74,8 +74,8 @@
                                     <a href="" class="tinhome_item_name"> Gìay Adidas Supper Star <br>     Giá : 2,7$</a>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 tinhome_item">
-                                    <a href="" class="da4"><img src="../images/da4.jpg"></a>
-                                    <a href="" class="tinhome_item_name"> Giày Adidas NMD R1 Xám<br>   Giá :  2.5$ </a>
+                                    <a href="" class="da11"><img src="../images/da11.jpg"></a>
+                                    <a href="" class="tinhome_item_name"> Giày Adidas NMD Trắng <br>   Giá :  2.5$ </a>
                                 </div>
                             </div>
                          </div>
