--- a/webgiay.html
+++ b/webgiay.html
@@ -50,7 +50,7 @@
                  </div>
             </div>
             <div class="images">
-                <img src="images/bia4.jpeg" width="100%" >
+                <img src="images/biagd1.gif" width="100%" height="500px" >
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" id="left">             
