--- a/Menu/giaynu.html
+++ b/Menu/giaynu.html
@@ -25,24 +25,23 @@
                     <div id="menu">
                         <ul id="menu_top">
                             <li><a href="../webgiay.html">Trang chủ</a></li>
-                            <li><a href="Menu/khuyenmai">Khuyến Mãi</a></li>
-                            <li><a href="Menu/giaynam">Giày Nam</a>
+                            <li><a href="../Menu/khuyenmai.html">Khuyến Mãi</a></li>
+                            <li><a href="../Menu/giaynam.html">Giày Nam</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">ADIDAS</a></li>
                                     <li><a href="">VANS</a>
                                 </ul>
                             </li>
-                            <li><a href="Menu/giaynu1">Giày Nữ</a>
+                            <li><a href="../Menu/giaynu.html">Giày Nữ</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">ADIDAS</a></li>
                                     <li><a href="">GUCCI</a>
                                 </ul>
                             </li>
-                            <li><a href="Menu/giaydoi.html">Giày Đôi</a></li>
-                            <li><a href="">Tin Tức</a></li>
-                            <li><a href="">Phụ Kiện</a></li>
+                            <li><a href="../Menu/giaydoi.html">Giày Đôi</a></li>
+                            <li><a href="../Menu/phukien.html">Phụ Kiện</a></li>
                         </ul>
                     </div>
                  </div>
