--- a/Menu/giaydoi.html
+++ b/Menu/giaydoi.html
@@ -33,7 +33,7 @@
                                     <li><a href="">VANS</a>
                                 </ul>
                             </li>
-                            <li><a href="">Giày Nữ</a>
+                            <li><a href="../Menu/giaynu/html">Giày Nữ</a>
                                 <ul>
                                     <li><a href="">NIKE</a></li>
                                     <li><a href="">Chanel</a></li>
